<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>org.example</groupId>
	<artifactId>camBench</artifactId>
	<version>1.0-SNAPSHOT</version>

	<properties>
		<maven.compiler.source>8</maven.compiler.source>
		<maven.compiler.target>8</maven.compiler.target>
		<maven-surefire-plugin.version>3.0.0-M7</maven-surefire-plugin.version>
		<rvsec.version>0.2.0</rvsec.version>
		<!--		<aspectj.version>1.8.1</aspectj.version>-->
		<guava.version>19.0</guava.version>
	</properties>

	<dependencies>
		<!--		<dependency>-->
		<!--			<groupId>br.unb.cic.rvmonitor</groupId>-->
		<!--			<artifactId>rv-monitor</artifactId>-->
		<!--			<version>${rvsec.version}</version>-->
		<!--		</dependency>-->
		<!--		<dependency>-->
		<!--			<groupId>org.aspectj</groupId>-->
		<!--			<artifactId>aspectjrt</artifactId>-->
		<!--			<version>${aspectj.version}</version>-->
		<!--		</dependency>-->
		<!--		<dependency>-->
		<!--			<groupId>org.aspectj</groupId>-->
		<!--			<artifactId>aspectjtools</artifactId>-->
		<!--			<version>${aspectj.version}</version>-->
		<!--		</dependency>-->

		<dependency>
			<groupId>com.google.guava</groupId>
			<artifactId>guava</artifactId>
			<version>${guava.version}</version>
		</dependency>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.13.2</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>br.unb.cic</groupId>
			<artifactId>rvsec-core</artifactId>
			<version>${rvsec.version}</version>
		</dependency>
		<dependency>
			<groupId>br.unb.cic</groupId>
			<artifactId>rvsec-logger-csv</artifactId>
			<version>${rvsec.version}</version>
		</dependency>
	</dependencies>
	<build>
		<sourceDirectory>src</sourceDirectory>
		<testSourceDirectory>test</testSourceDirectory>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>${maven-surefire-plugin.version}</version>
				<configuration>					
					<runOrder>alphabetical</runOrder>
					<testFailureIgnore>false</testFailureIgnore>
					<trimStackTrace>true</trimStackTrace>
				</configuration>
			</plugin>
		</plugins>
	</build>

	<profiles>
		<profile>
			<id>mop</id>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-surefire-plugin</artifactId>
						<configuration>
							<argLine>-Xmx4096m -XX:MaxPermSize=1024m</argLine>
							<argLine>-javaagent:${basedir}/JavaMOPAgent.jar</argLine>
							<runOrder>alphabetical</runOrder>
						</configuration>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>
	
</project>
